styles.css
/* ... */
.fixed {
  position: fixed;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.-bottom-full {
  bottom: -100%;
}

.bottom-0 {
  bottom: 0px;
}

.bottom-4 {
  bottom: 1rem;
}

.left-0 {
  left: 0px;
}

.right-0 {
  right: 0px;
}

.right-4 {
  right: 1rem;
}

.right-\[10\%\] {
  right: 10%;
}

/* .top-0 {
  top: 0px;
} */

.top-\[60\%\] {
  top: 60%;
}

.top-full {
  top: 100%;
}

.z-50 {
  z-index: 50;
}

.col-span-3 {
  grid-column: span 3 / span 3;
}

.col-span-4 {
  grid-column: span 4 / span 4;
}

.my-10 {
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
}

.-mb-\[1px\] {
  margin-bottom: -1px;
}

.ml-4 {
  margin-left: 1rem;
}

.mr-1 {
  margin-right: 0.25rem;
}

.inline-block {
  display: inline-block;
}

.flex {
  display: flex;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.aspect-\[1920\/1080\] {
  aspect-ratio: 1920/1080;
}

.aspect-auto {
  aspect-ratio: auto;
}

.aspect-square {
  aspect-ratio: 1 / 1;
}

.h-0 {
  height: 0px;
}

.h-4 {
  height: 1rem;
}

.h-6 {
  height: 1.5rem;
}

.h-72 {
  height: 18rem;
}

.h-8 {
  height: 2rem;
}

.h-auto {
  height: auto;
}

.h-full {
  height: 100%;
}

.mt-48 {
  margin-top: 48px;
}

.h-w-custom-plan {
  height: 79vh;
  width: 100%;
  max-height: 90vh;
}

.button-custom {
  color: #F57921 !important;
  border: 2px solid #F57921;

}


.section-gated {
  padding: 0px 100px 0px 180px;
}


.\!min-h-0 {
  min-height: 0px !important;
}

.w-1\/2 {
  width: 50%;
}

.w-11\/12 {
  width: 91.666667%;
}

.w-2\/3 {
  width: 68.666667%;
}

.w-4 {
  width: 1rem;
}

.w-4\/5 {
  width: 80%;
}

.w-6 {
  width: 1.5rem;
}

.w-8 {
  width: 2rem;
}

.w-\[70\%\] {
  width: 70%;
}

.w-\[90\%\] {
  width: 90%;
}

.w-auto {
  width: auto;
}

.w-full {
  width: 100%;
}

.max-w-sm {
  max-width: 24rem;
}

.flex-auto {
  flex: 1 1 auto;
}

.shrink {
  flex-shrink: 1;
}

.rotate-180 {
  --tw-rotate: 180deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.transform {
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

.animate-spin {
  animation: spin 1s linear infinite;
}

.cursor-pointer {
  cursor: pointer;
}

.list-inside {
  list-style-position: inside;
}

.list-decimal {
  list-style-type: decimal;
}


.flex-row {
  flex-direction: row;
}

.flex-col {
  flex-direction: column;
}

.flex-wrap {
  flex-wrap: wrap;
}

.items-start {
  align-items: flex-start;
}

.items-center {
  align-items: center;
}

.items-stretch {
  align-items: stretch;
}

.justify-start {
  justify-content: flex-start;
}

.justify-end {
  justify-content: flex-end;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.justify-around {
  justify-content: space-around;
}

.\!gap-0 {
  gap: 0px !important;
}

.gap-10 {
  gap: 2.5rem;
}

.gap-2 {
  gap: 0.5rem;
}

.gap-4 {
  gap: 1rem;
}

.gap-5 {
  gap: 1.25rem;
}

.gap-6 {
  gap: 1.5rem;
}

.gap-y-5 {
  row-gap: 1.25rem;
}

.overflow-hidden {
  overflow: hidden;
}

.rounded {
  border-radius: 0.25rem;
}

.rounded-full {
  border-radius: 9999px;
}

.rounded-md {
  border-radius: 0.375rem;
}

.border {
  border-width: 1px;
}

.border-2 {
  border-width: 2px;
}

.border-b-2 {
  border-bottom-width: 2px;
}

.border-\[\#2A565A\] {
  --tw-border-opacity: 1;
  border-color: rgb(42 86 90 / var(--tw-border-opacity));
}

.border-red-500 {
  --tw-border-opacity: 1;
  border-color: rgb(239 68 68 / var(--tw-border-opacity));
}

.border-transparent {
  border-color: transparent;
}

.bg-\[\#2A565C\]\/10 {
  background-color: rgb(42 86 92 / 0.1);
}

.bg-\[\#9ECEBF\] {
  --tw-bg-opacity: 1;
  background-color: rgb(158 206 191 / var(--tw-bg-opacity));
}

/*  */

.bg-\[\#E1EDEA\] {
  --tw-bg-opacity: 1;
  background-color: rgb(225 237 234 / var(--tw-bg-opacity));
}

.bg-\[\#2E565B\] {
  --tw-bg-opacity: 1;
  background-color: rgb(46 86 91 / var(--tw-bg-opacity));
}

.bg-\[\#D6EDE7\] {
  --tw-bg-opacity: 1;
  background-color: rgb(214 237 231 / var(--tw-bg-opacity));
}

/*  */


.bg-\[\#EEC173\] {
  --tw-bg-opacity: 1;
  background-color: rgb(238 193 115 / var(--tw-bg-opacity));
}

.bg-white {
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}

.bg-\[url\(assets\/enquiries\/leaf-bg\.png\)\] {
  background-image: url(assets/enquiries/leaf-bg.png);
}

.bg-contain {
  background-size: contain;
}

.bg-bottom {
  background-position: bottom;
}

.bg-no-repeat {
  background-repeat: no-repeat;
}

.fill-\[\#2A565A\] {
  fill: #2A565A;
}

.fill-green-800 {
  fill: #166534;
}

.fill-neutral-700 {
  fill: #404040;
}

.fill-red-800 {
  fill: #991b1b;
}

.fill-white {
  fill: #fff;
}

.object-contain {
  -o-object-fit: contain;
  object-fit: contain;
}

.object-cover {
  -o-object-fit: cover;
  object-fit: cover;
}

.object-top {
  -o-object-position: top;
  object-position: top;
}

.p-2 {
  padding: 0.5rem;
}

.\!px-0 {
  padding-left: 0px !important;
  padding-right: 0px !important;
}

.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.px-6 {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.px-8 {
  padding-left: 2rem;
  padding-right: 2rem;
}

.py-10 {
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
}

.py-2 {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.py-4 {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.\!pb-0 {
  padding-bottom: 0px !important;
}

.text-center {
  text-align: center;
}

.text-justify {
  text-align: justify;
}

.\!font-montserrat {
  font-family: Montserrat, sans-serif !important;
}

.font-figtree {
  font-family: Figtree, sans-serif;
}

.font-montserrat {
  font-family: Montserrat, sans-serif;
}
/* ... */

